<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white"
    tools:context="xyz.bnayagrawal.android.kat.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center">

    <android.support.v7.widget.SearchView
        android:id="@+id/search_view"
        style="@style/SearchWidgetTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/query_hint" />

    <TextView
        android:id="@+id/text_label_kickass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/lato_light"
        android:text="@string/kickass"
        android:textColor="?attr/colorPrimary"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/search_view"
        app:layout_constraintEnd_toStartOf="@+id/text_label_torrents"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_label_torrents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/torrents"
        android:textColor="?attr/colorPrimary"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/search_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_label_kickass" />

    <Button
        android:id="@+id/button_browse"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_button_background_hollow"
        android:fontFamily="@font/lato"
        android:text="@string/button_browse"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/button_search"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_button_background_solid"
        android:fontFamily="@font/lato"
        android:text="@string/button_search"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_browse"
        app:layout_constraintTop_toBottomOf="@+id/search_view" />

    <ImageView
        android:id="@+id/image_icon_kickass"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/icon_content_description"
        app:layout_constraintBottom_toTopOf="@+id/text_label_kickass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/kickass" />

        <TextView
            android:id="@+id/text_label_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableTop="@drawable/ic_github"
            android:text="@string/developer"
            android:fontFamily="@font/lato"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
